--- a/pupil-spa/src/app/aa-fonts/aa-fonts.component.scss
+++ b/pupil-spa/src/app/aa-fonts/aa-fonts.component.scss
@@ -6,19 +6,20 @@ label {
   line-height: 28px;
 }
 
+.column-full > p {
+  margin-top: 15px;
+}
+
 .preview-box {
   border: 1px solid #6f777b;
   float: left;
   width: 500px;
   height: 360px;
   position: relative;
-  margin: 10px 0 0 40px;
+  margin: 0 auto;
 
-  @media (max-width: 640px) {
-    margin: 0;
+  @media (max-width: 750px) {
     max-width: 100%;
-    height: 250px;
-    padding-bottom: 20px;
   }
 
   > .badge {
@@ -59,7 +60,8 @@ label {
 .warning-box {
   float: left;
   width: 500px;
-  height: 350px;
+  height: 360px;
+  margin: 0 auto;
   background-color: rgba(0, 94, 165, 1);
   padding: 0;
   i {
@@ -72,10 +74,8 @@ label {
     color: #fff !important;
   }
 
-  @media (max-width: 640px) {
-    margin: 0;
+  @media (max-width: 750px) {
     max-width: 100%;
-    height: auto;
 
     i {
       top: 50px;
